--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -21,72 +21,76 @@
     <string name="lang_error">Please choose at least one choice</string>
 
     <!--Login Activity Strings-->
-    <string name="mob_hi_there">Hi there!</string>
-    <string name="mob_enter_phno">Enter your Phone no.</string>
-    <string name="mob_invalid_phno">Invalid Phone Number</string>
-    <string name="mob_phno_suggestion">Enter Mobile Number</string>
-    <string name="mob_four_digit_code">You will get a 4 digit verification code via SMS</string>
-    <string name="mob_next">Next</string>
-    <string name="loginSnackbarMobile">Please Enter your mobile Number.</string>
+    <string name="mob_hi_there">Hallo!</string>
+    <string name="mob_enter_phno">Geben Sie Ihre Telefonnummer ein.</string>
+    <string name="mob_invalid_phno">Ungültige Telefonnummer</string>
+    <string name="mob_phno_suggestion">Geben Sie die Handynummer ein</string>
+    <string name="mob_four_digit_code">Sie erhalten einen 4-stelligen Bestätigungscode per SMS</string>
+    <string name="mob_next">Nächster</string>
+    <string name="loginSnackbarMobile">Bitte geben sie ihre Mobiltelefonnummer ein.</string>
 
     <!--Verification Activity Strings-->
-    <string name="ver_txtverification">Verification</string>
-    <string name="ver_enter_otp">Enter OTP</string>
-    <string name="ver_no_receiveotp">Didn\'t receive the verification OTP?</string>
-    <string name="resendotp">Resend OTP</string>
-    <string name="ver_submit">Submit</string>
-    <string name="ver_error">Enter Valid Phone Number</string>
-    <string name="verSnackbar">Please Enter all data.</string>
+    <string name="ver_txtverification">Nachprüfung</string>
+    <string name="ver_enter_otp">Geben Sie OTP ein</string>
+    <string name="ver_no_receiveotp">Haben Sie das Bestätigungs-OTP nicht erhalten?</string>
+    <string name="resendotp">Senden Sie OTP erneut</string>
+    <string name="resendotpIn">Senden Sie OTP erneut in </string>
+    <string name="ver_submit">einreichen</string>
+    <string name="ver_error">Geben Sie eine gültige Telefonnummer ein.</string>
+    <string name="verSnackbar">Bitte geben Sie alle Daten ein.</string>
 
     <!--Profile Activity Strings-->
-    <string name="profileTitle">Profile</string>
-    <string name="profileSubtitle">Please enter your details</string>
+    <string name="profileTitle">Profil</string>
+    <string name="profileSubtitle">Bitte geben Sie Ihre Daten ein</string>
     <string name="profileName">Name</string>
-    <string name="profileNameHint">Enter your name</string>
+    <string name="profileNameHint">Gib deinen Namen ein</string>
     <string name="profileEmail">Email</string>
-    <string name="profileEmailHint">Enter your email id</string>
-    <string name="profileDOB">Date of Birth</string>
-    <string name="profileDOBHint">DD/MM/YYYY</string>
-    <string name="profileHomeTown">Hometown</string>
-    <string name="profileHomeTownHint">Enter your hometown</string>
-    <string name="profileSaveButton">Save and Proceed</string>
+    <string name="profileEmailHint">Geben Sie Ihre E-Mail-ID ein</string>
+    <string name="profileDOB">Geburtsdatum</string>
+    <string name="profileDOBHint">DD/MM/JJJJ</string>
+    <string name="profileHomeTown">Heimatort</string>
+    <string name="profileHomeTownHint">Geben Sie Ihre Heimatstadt ein</string>
+    <string name="profileSaveButton">Speichern und fortfahren</string>
 
     <!--Navigation Activity Strings-->
-    <string name="navigationHome">Home</string>
-    <string name="navigationMap">Map</string>
-    <string name="navigationContact">Contact</string>
-    <string name="navigationProfile">Profile</string>
-    <string name="navigationSnackbar">Press the back button once again to close the application.</string>
+    <string name="navigationHome">Zuhause</string>
+    <string name="navigationMap">Karte</string>
+    <string name="navigationContact">Kontakt</string>
+    <string name="navigationProfile">Profil</string>
+    <string name="navigationSnackbar">Drücken Sie die Zurück-Taste erneut, um die Anwendung zu schließen.</string>
 
     <!--Home Fragment Strings-->
-    <string name="textHome1">Current status</string>
-    <string name="activityIdleHome">idle</string>
-    <string name="latitudeHintHome">Lat : 0.0</string>
-    <string name="longitudeHintHome">Lon : 0.0</string>
-    <string name="peopleAroundHome">People around you: 0</string>
+    <string name="textHome1">Aktueller Status</string>
+    <string name="activityIdleHome">Leerlauf</string>
+    <string name="latitudeHintHome">Lat :</string>
+    <string name="longitudeHintHome">Lon :</string>
+    <string name="peopleAroundHome">Menschen um dich herum: 0</string>
     <string name="probabilityHome">0%</string>
-    <string name="textHome2">Chance of you being infected with CoViD-19</string>
-    <string name="textHome3">Please follow the following instruictions</string>
-    <string name="textHome4">1.Self quarantine yourself and maintain distance from your friends and family</string>
-    <string name="textHome5">2.Gauge the severity of symptoms</string>
-    <string name="textHome6">3.Report to the nearest testing facility to get tested</string>
+    <string name="textHome2">Chance, dass Sie mit CoViD-19 infiziert werden</string>
+    <string name="textHome3">Bitte befolgen Sie die folgenden Anweisungen</string>
+    <string name="textHome4">1.Selbstquarantäne selbst und halten Sie Abstand zu Ihren Freunden und Familie</string>
+    <string name="textHome5">2.Messen Sie die Schwere der Symptome</string>
+    <string name="textHome6">3. Melden Sie sich bei der nächstgelegenen Testeinrichtung, um sich testen zu lassen</string>
+
+    <!--Map Fragment Strings-->
+    <string name="mapMarker">Dein Standpunkt</string>
 
     <!--Contact Fragment Strings-->
-    <string name="textContact2">You haven\'t been in close proximity with any infected people</string>
-    <string name="textContact1">Nothing yet</string>
+    <string name="textContact2">Sie waren nicht in unmittelbarer Nähe von infizierten Personen</string>
+    <string name="textContact1">Noch nichts</string>
 
     <!--Profile Fragment Strings-->
     <string name="dobProfile">DOB :</string>
     <string name="emailProfile">Email :</string>
     <string name="emailHintProfile">test@test.com</string>
-    <string name="keyProfile">Access to Govt.</string>
-    <string name="logoutProfile">Logout</string>
+    <string name="keyProfile">Zugang zur Regierung.</string>
+    <string name="logoutProfile">Ausloggen</string>
 
     <string name="test_email">test@test.com</string>
     <string name="test_password">testpassword</string>
 
 
-    <string name="notification_text">Tracking, tap to cancel</string>
+    <string name="notification_text">Tracking, tippen Sie auf, um abzubrechen</string>
     <string name="transport_id" translatable="false">123</string>
     <string name="firebase_path" translatable="false">locations</string>
     <string name="firebase_email" translatable="false">test@example.com</string>
