--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -34,6 +34,7 @@
     <string name="ver_enter_otp">Enter OTP</string>
     <string name="ver_no_receiveotp">Didn\'t receive the verification OTP?</string>
     <string name="resendotp">Resend OTP</string>
+    <string name="resendotpIn">Resend OTP in </string>
     <string name="ver_submit">Submit</string>
     <string name="ver_error">Enter Valid Phone Number</string>
     <string name="verSnackbar">Please Enter all data.</string>
@@ -70,6 +71,9 @@
     <string name="textHome4">1.Self quarantine yourself and maintain distance from your friends and family</string>
     <string name="textHome5">2.Gauge the severity of symptoms</string>
     <string name="textHome6">3.Report to the nearest testing facility to get tested</string>
+
+    <!--Map Fragment Strings-->
+    <string name="mapMarker">Your Position</string>
 
     <!--Contact Fragment Strings-->
     <string name="textContact2">You haven\'t been in close proximity with any infected people</string>
