--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,16 @@
     <string name="keyProfile">Access to Govt.</string>
     <string name="logoutProfile">Logout</string>
 
+    <!--Oreo Activity Service-->
+    <string name="activityStill">STILL</string>
+    <string name="activityCycling">CYCLING</string>
+    <string name="activityStanding">STANDING</string>
+    <string name="activityWalking">WALKING</string>
+    <string name="activityRunning">RUNNING</string>
+    <string name="activityTilting">TILTING</string>
+    <string name="activityVehicle">VEHICLE</string>
+    <string name="activityUnknown">UNKNOWN</string>
+
     <string name="test_email">test@test.com</string>
     <string name="test_password">testpassword</string>
 
@@ -93,7 +103,6 @@
     <string name="firebase_path" translatable="false">locations</string>
     <string name="firebase_email" translatable="false">test@example.com</string>
     <string name="firebase_password" translatable="false">password</string>
-
 
 
     <string-array name="CountryCodes">
