--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -87,14 +87,14 @@
     <string name="logoutProfile">Cerrar sesión</string>
 
     <!--Oreo Activity Service-->
-    <string name="activityStill">STILL</string>
-    <string name="activityStanding">STANDING</string>
-    <string name="activityCycling">CYCLING</string>
-    <string name="activityWalking">WALKING</string>
-    <string name="activityRunning">RUNNING</string>
-    <string name="activityTilting">TILTING</string>
-    <string name="activityVehicle">VEHICLE</string>
-    <string name="activityUnknown">UNKNOWN</string>
+    <string name="activityStill">TODAVÍA</string>
+    <string name="activityStanding">EN PIE</string>
+    <string name="activityCycling">CICLISMO</string>
+    <string name="activityWalking">CAMINANDO</string>
+    <string name="activityRunning">CORRIENDO</string>
+    <string name="activityTilting">INCLINACIÓN</string>
+    <string name="activityVehicle">VEHÍCULO</string>
+    <string name="activityUnknown">DESCONOCIDO</string>
 
     <string name="test_email">test@test.com</string>
     <string name="test_password">testpassword</string>
